Añadido el campo de fecha de nacimiento en users
