# apiAnalesCiencia/public/api-docs/models/openapi.yaml
@@ -1331,6 +1331,10 @@ components:
             - INACTIVE
             - READER
             - WRITER
+        birthDate:
+          description: An RFC3339 formatted date string ("2025-01-01")
+          type: string
+          format: date
         # _links:
         #   description: link relations
         #   type: object
@@ -1353,6 +1357,7 @@ components:
             username: user1508
             email: miw.etsisi@upm.es
             role: INACTIVE
+            birthDate: '2020-01-01'
             # _links:
             #   parent:
             #     href: /api/v1/users
@@ -1366,6 +1371,7 @@ components:
             username: user1508
             email: miw.etsisi@upm.es
             role: INACTIVE
+            birthDate: '2020-01-01'
             # _links:
             #   parent:
             #     href: /api/v1/users
@@ -1603,11 +1609,16 @@ components:
                 description: User password
                 type: string
                 format: password
-            required: [ 'username', 'email', 'password' ]
+              birthDate:
+                description: User birth date
+                type: string
+                format: date
+            required: [ 'username', 'email', 'password', 'birthDate' ]
             examples:
                 - username: username
                   email: User_email@example.com
                   password: User_password
+                  birthDate: '2020-01-01'
     UpdateUserRequestBody:
       description: User data that you want to modify
       required: true
@@ -1634,11 +1645,16 @@ components:
                   - INACTIVE
                   - READER
                   - WRITER
+              birthDate:
+                description: new User birth date
+                type: string
+                format: date
             examples:
               - username: miw.etsisi
                 email: miw.etsisi@upm.es
                 password: MiW_User_password
                 role: READER
+                birthDate: '2020-01-01'
     LoginRequestBody:
       description: Registered **username** and **password**
       required: true
